--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -5,4 +5,33 @@
     background-image: url('../img/best-seo-services-slide-1.png');
     background-repeat: no-repeat;
     background-position: 90% 90%;
+    >*{
+        border: 1px solid white;
+        width: 100%; 
+    }
+    >header{
+        height: 15%;
+        >*{
+            border: 1px solid red;
+            height: 100%;
+            padding: 0 24px;
+        }
+        >figure,
+        >div{
+            width: 25%;
+        }
+        >nav{
+            width: 50%;
+        }
+        >figure{
+            align-items: center;
+            justify-content: start;
+            >img{
+                height: 55%;
+            }
+        }
+    }
+    >div{
+        height: 85%;
+    }
 }
