--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -25,12 +25,44 @@
 .head_top > header > nav {
   width: 50%;
 }
+.head_top > header > nav > ul {
+  width: 100%;
+  height: 100%;
+  background-color: red;
+}
+.head_top > header > nav > ul > li {
+  height: 100%;
+  border: 1px solid white;
+  margin: 0 15px;
+  display: flex;
+  align-items: center;
+}
+.head_top > header > nav > ul > li > a {
+  background-color: yellow;
+  font-size: 20px;
+  text-transform: uppercase;
+}
 .head_top > header > figure {
   align-items: center;
   justify-content: start;
 }
 .head_top > header > figure > img {
   height: 55%;
+}
+.head_top > header > div {
+  justify-content: end;
+  align-items: center;
+}
+.head_top > header > div > a {
+  width: 70%;
+  height: 40px;
+  background-color: orange;
+  color: white;
+  border-radius: 50px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-weight: bold;
 }
 .head_top > div {
   height: 85%;
