--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -22,12 +22,44 @@
         }
         >nav{
             width: 50%;
+            >ul{
+                width: 100%;
+                height: 100%;
+                background-color: red;
+                >li{
+                    height: 100%;
+                    border: 1px solid white;
+                    margin: 0 15px;
+                    display: flex;
+                    align-items: center;
+                    >a{
+                        background-color:yellow;
+                        font-size: 20px;
+                        text-transform: uppercase;
+                    }
+                }
+            }
         }
         >figure{
             align-items: center;
             justify-content: start;
             >img{
                 height: 55%;
+            }
+        }
+        >div{
+            justify-content: end;
+            align-items: center;
+            >a{
+                width: 70%; 
+                height: 40px;
+                background-color:orange;
+                color: white;
+                border-radius: 50px;
+                justify-content: center;
+                align-items: center;
+                display: flex;
+                font-weight: bold; 
             }
         }
     }
