--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -7,7 +7,6 @@
   background-position: 90% 90%;
 }
 .head_top > * {
-  border: 1px solid white;
   width: 100%;
 }
 .head_top > header {
@@ -28,19 +27,20 @@
 .head_top > header > nav > ul {
   width: 100%;
   height: 100%;
-  background-color: red;
 }
 .head_top > header > nav > ul > li {
   height: 100%;
-  border: 1px solid white;
   margin: 0 15px;
   display: flex;
   align-items: center;
 }
 .head_top > header > nav > ul > li > a {
-  background-color: yellow;
-  font-size: 20px;
+  font-size: 18px;
   text-transform: uppercase;
+  color: white;
+}
+.head_top > header > nav > ul > li > a:hover {
+  color: orange;
 }
 .head_top > header > figure {
   align-items: center;
