--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-position: 90% 90%;
     >*{
-        border: 1px solid white;
+        // border: 1px solid white;
         width: 100%; 
     }
     >header{
@@ -25,17 +25,21 @@
             >ul{
                 width: 100%;
                 height: 100%;
-                background-color: red;
+                // background-color: red;
                 >li{
                     height: 100%;
-                    border: 1px solid white;
+                    // border: 1px solid white;
                     margin: 0 15px;
                     display: flex;
                     align-items: center;
                     >a{
-                        background-color:yellow;
-                        font-size: 20px;
+                        // background-color:yellow;
+                        font-size: 18px;
                         text-transform: uppercase;
+                        color: white;
+                        &:hover{
+                            color: orange;
+                        }
                     }
                 }
             }
