--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -35,7 +35,7 @@
                     >a{
                         // background-color:yellow;
                         font-size: 18px;
-                        
+                        display: flex;
                         text-transform: uppercase;
                         color: white;
                         &:hover{
@@ -49,7 +49,7 @@
                            padding: 4px;
                            color: orange;
                            margin-left: 5px;
-                           
+                           transform: translateY(-3px);
                         }
                     }
                 }
