--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -48,7 +48,7 @@
   border-radius: 5px;
   font-size: 10px;
   font-weight: normal;
-  padding: 4px;
+  padding: 4px 6px;
   color: orange;
   margin-left: 5px;
   transform: translateY(-3px);
