--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -1,10 +1,15 @@
-.head_top{
+main>div{
     width: 100%;
-    height: 120vh;
     background-color: rgb(3,70,213);
-    background-image: url('../img/best-seo-services-slide-1.png');
+    background-image: url('../img/download.png');
     background-repeat: no-repeat;
-    background-position: 90% 90%;
+    background-size: 400px;
+    background-position: 90% 80%;height: 120vh;
+}
+.head_top{
+    width: 80%;
+    height: 120vh;
+    margin: auto;
     >*{
         // border: 1px solid white;
         width: 100%; 
@@ -12,7 +17,7 @@
     >header{
         height: 15%;
         >*{
-            border: 1px solid red;
+            // border: 1px solid red;
             height: 100%;
             padding: 0 24px;
         }
@@ -32,11 +37,12 @@
                     margin: 0 15px;
                     display: flex;
                     align-items: center;
+                    
                     >a{
                         // background-color:yellow;
                         font-size: 18px;
                         display: flex;
-                        text-transform: uppercase;
+                        text-transform: capitalize;
                         color: white;
                         &:hover{
                             color: orange;
@@ -49,7 +55,7 @@
                            padding: 4px 6px;
                            color: orange;
                            margin-left: 5px;
-                           transform: translateY(-3px);
+                           transform: translateY(-1px);
                         }
                     }
                 }
@@ -80,5 +86,50 @@
     }
     >div{
         height: 85%;
+        justify-content: start;
+        align-items: center;
+        >article{
+            padding-left: 24px;
+            max-width: 40vw;
+            min-height: 50px;
+            // background-color: red;
+            >*{
+                color: white;
+                // border: 1px solid white;
+                width: 100%;
+            }
+            >h1{
+                font-size: 50px;
+                text-transform: capitalize;
+            }
+            >p{
+                margin: 15px 0;
+                font-size: 19px;
+                line-height: 30px;
+            }
+            >div{
+                padding: 30px 0;
+                >*{
+                    text-transform: uppercase;
+                }
+                >a:first-of-type{
+                    padding: 15px 60px;
+                    background: #ffa737;
+                    border-radius: 40px;
+                    &:hover{
+                        background-color: rgb(255, 178, 81);
+                    }
+                }
+                >a:last-of-type{
+                    margin-left: 15px;
+                    padding: 15px 40px;
+                    background: #556eed;
+                    border-radius: 40px;
+                    &:hover{
+                        background-color: rgb(96, 122, 254);
+                    }
+                }
+            }
+        }
     }
 }
