--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -133,3 +133,24 @@ main>div{
         }
     }
 }
+.agency{
+    width: 100%;
+    justify-content: center; 
+    margin: 100px 0; 
+    >article{
+        width: 50%;
+        // border: 1px solid red;
+        >*{
+            text-align: center;
+            margin: 25px 0;
+        }
+        >p{
+            color: black; 
+            font-size: 18px;
+        }
+        >h2{
+            font-size: 30px;
+            text-transform: uppercase;
+        }
+    }
+}
