--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -147,4 +147,69 @@ main > div {
 .agency > article > h2 {
   font-size: 30px;
   text-transform: uppercase;
+}
+
+.items {
+  background-color: rgb(183, 183, 183);
+}
+.items > .row {
+  width: 100%;
+  justify-content: space-evenly;
+}
+.items > .row article {
+  width: 350px;
+  height: 350px;
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 50px;
+}
+.items > .row article > * {
+  margin: 15px 0;
+  width: 100%;
+}
+.items > .row article > h2 {
+  text-align: center;
+  font-size: 30px;
+}
+.items > .row article > p {
+  text-align: center;
+  font-size: 18px;
+  color: rgb(65, 65, 65);
+}
+.items > .row article > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.items > .row article > div > div {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  overflow: hidden;
+}
+.items > .row article > div > div:hover > i:nth-of-type(1) {
+  left: 0;
+  transition: 0.4s;
+}
+.items > .row article > div > div:hover > i:nth-of-type(2) {
+  left: 50px;
+  transition: 0.4s;
+}
+.items > .row article > div > div > i {
+  width: 100%;
+  height: 100%;
+  border: black;
+  position: absolute;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.items > .row article > div > div > i:nth-of-type(1) {
+  left: -50px;
+}
+.items > .row article > div > div > i:nth-of-type(2) {
+  left: 0px;
 }/*# sourceMappingURL=master.css.map */
