--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -1,156 +1,221 @@
-main>div{
-    width: 100%;
-    background-color: rgb(3,70,213);
-    background-image: url('../img/download.png');
-    background-repeat: no-repeat;
-    background-size: 400px;
-    background-position: 90% 80%;height: 120vh;
+main > div {
+  width: 100%;
+  background-color: rgb(3, 70, 213);
+  background-image: url("../img/download.png");
+  background-repeat: no-repeat;
+  background-size: 400px;
+  background-position: 90% 80%;
+  height: 120vh;
 }
-.head_top{
-    width: 80%;
-    height: 120vh;
-    margin: auto;
-    >*{
-        // border: 1px solid white;
-        width: 100%; 
+.head_top {
+  width: 80%;
+  height: 120vh;
+  margin: auto;
+  > * {
+    // border: 1px solid white;
+    width: 100%;
+  }
+  > header {
+    height: 15%;
+    > * {
+      // border: 1px solid red;
+      height: 100%;
+      padding: 0 24px;
     }
-    >header{
-        height: 15%;
-        >*{
-            // border: 1px solid red;
-            height: 100%;
-            padding: 0 24px;
+    > figure,
+    > div {
+      width: 25%;
+    }
+    > nav {
+      width: 50%;
+      > ul {
+        width: 100%;
+        height: 100%;
+        // background-color: red;
+        > li {
+          height: 100%;
+          // border: 1px solid white;
+          margin: 0 15px;
+          display: flex;
+          align-items: center;
+
+          > a {
+            // background-color:yellow;
+            font-size: 18px;
+            display: flex;
+            text-transform: capitalize;
+            color: white;
+            &:hover {
+              color: orange;
+            }
+            > strong {
+              border: 1px solid orange;
+              border-radius: 5px;
+              font-size: 10px;
+              font-weight: normal;
+              padding: 4px 6px;
+              color: orange;
+              margin-left: 5px;
+              transform: translateY(-1px);
+            }
+          }
         }
-        >figure,
+      }
+    }
+    > figure {
+      align-items: center;
+      justify-content: start;
+      > img {
+        height: 55%;
+      }
+    }
+    > div {
+      justify-content: end;
+      align-items: center;
+      > a {
+        width: 70%;
+        height: 40px;
+        background-color: orange;
+        color: white;
+        border-radius: 50px;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        font-weight: bold;
+      }
+    }
+  }
+  > div {
+    height: 85%;
+    justify-content: start;
+    align-items: center;
+    > article {
+      padding-left: 24px;
+      max-width: 40vw;
+      min-height: 50px;
+      // background-color: red;
+      > * {
+        color: white;
+        // border: 1px solid white;
+        width: 100%;
+      }
+      > h1 {
+        font-size: 50px;
+        text-transform: capitalize;
+      }
+      > p {
+        margin: 15px 0;
+        font-size: 19px;
+        line-height: 30px;
+      }
+      > div {
+        padding: 30px 0;
+        > * {
+          text-transform: uppercase;
+        }
+        > a:first-of-type {
+          padding: 15px 60px;
+          background: #ffa737;
+          border-radius: 40px;
+          &:hover {
+            background-color: rgb(255, 178, 81);
+          }
+        }
+        > a:last-of-type {
+          margin-left: 15px;
+          padding: 15px 40px;
+          background: #556eed;
+          border-radius: 40px;
+          &:hover {
+            background-color: rgb(96, 122, 254);
+          }
+        }
+      }
+    }
+  }
+}
+.agency {
+  width: 100%;
+  justify-content: center;
+  margin: 100px 0;
+  > article {
+    width: 50%;
+    // border: 1px solid red;
+    > * {
+      text-align: center;
+      margin: 25px 0;
+    }
+    > p {
+      color: black;
+      font-size: 18px;
+    }
+    > h2 {
+      font-size: 30px;
+      text-transform: uppercase;
+    }
+  }
+}
+.items {
+    background-color: rgb(183, 183, 183);
+  > .row {
+    width: 100%;
+    justify-content: space-evenly;
+    article {
+      width: 350px;
+      height: 350px;
+      background-color: white;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 50px;
+      >*{
+        // border: 1px solid red;
+        margin: 15px 0;width: 100%;
+      }
+      >h2{
+        text-align: center;
+        font-size: 30px;
+      } 
+      >p{
+        text-align: center;font-size: 18px;color: rgba(65,65,65);
+      }
+      >div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         >div{
-            width: 25%;
-        }
-        >nav{
-            width: 50%;
-            >ul{
+            width: 50px;
+            height: 50px;
+            // border: 1px solid gray;
+            position: relative;
+            overflow: hidden;
+            &:hover>i:nth-of-type(1){
+                left: 0;
+                transition: .4s;
+            }
+            &:hover>i:nth-of-type(2){
+                left: 50px;
+                transition: .4s;
+            }
+            >i{
                 width: 100%;
                 height: 100%;
-                // background-color: red;
-                >li{
-                    height: 100%;
-                    // border: 1px solid white;
-                    margin: 0 15px;
-                    display: flex;
-                    align-items: center;
-                    
-                    >a{
-                        // background-color:yellow;
-                        font-size: 18px;
-                        display: flex;
-                        text-transform: capitalize;
-                        color: white;
-                        &:hover{
-                            color: orange;
-                        }
-                        >strong{
-                           border: 1px solid orange; 
-                           border-radius: 5px;
-                           font-size: 10px;
-                           font-weight: normal;
-                           padding: 4px 6px;
-                           color: orange;
-                           margin-left: 5px;
-                           transform: translateY(-1px);
-                        }
-                    }
-                }
-            }
-        }
-        >figure{
-            align-items: center;
-            justify-content: start;
-            >img{
-                height: 55%;
-            }
-        }
-        >div{
-            justify-content: end;
-            align-items: center;
-            >a{
-                width: 70%; 
-                height: 40px;
-                background-color:orange;
-                color: white;
-                border-radius: 50px;
+                // background-color:red; 
+                border: black;
+                position: absolute;
+                font-size: 30px;
+                display: flex;
                 justify-content: center;
                 align-items: center;
-                display: flex;
-                font-weight: bold; 
-            }
-        }
-    }
-    >div{
-        height: 85%;
-        justify-content: start;
-        align-items: center;
-        >article{
-            padding-left: 24px;
-            max-width: 40vw;
-            min-height: 50px;
-            // background-color: red;
-            >*{
-                color: white;
-                // border: 1px solid white;
-                width: 100%;
-            }
-            >h1{
-                font-size: 50px;
-                text-transform: capitalize;
-            }
-            >p{
-                margin: 15px 0;
-                font-size: 19px;
-                line-height: 30px;
-            }
-            >div{
-                padding: 30px 0;
-                >*{
-                    text-transform: uppercase;
+                &:nth-of-type(1){
+                    left: -50px;
                 }
-                >a:first-of-type{
-                    padding: 15px 60px;
-                    background: #ffa737;
-                    border-radius: 40px;
-                    &:hover{
-                        background-color: rgb(255, 178, 81);
-                    }
-                }
-                >a:last-of-type{
-                    margin-left: 15px;
-                    padding: 15px 40px;
-                    background: #556eed;
-                    border-radius: 40px;
-                    &:hover{
-                        background-color: rgb(96, 122, 254);
-                    }
+                &:nth-of-type(2){
+                    left: 0px;
                 }
             }
         }
+      }
     }
-}
-.agency{
-    width: 100%;
-    justify-content: center; 
-    margin: 100px 0; 
-    >article{
-        width: 50%;
-        // border: 1px solid red;
-        >*{
-            text-align: center;
-            margin: 25px 0;
-        }
-        >p{
-            color: black; 
-            font-size: 18px;
-        }
-        >h2{
-            font-size: 30px;
-            text-transform: uppercase;
-        }
-    }
+  }
 }
