--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -216,6 +216,13 @@ main > div {
             }
         }
       }
+      
     }
+    >figure{
+        width: 100%;
+        >img{
+            width: 100%;
+        }
+      }
   }
 }
