--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -149,55 +149,58 @@ main > div {
   text-transform: uppercase;
 }
 
-.items {
+.items, .services {
   background-color: rgb(183, 183, 183);
 }
-.items > .row {
+.items > .row, .services > .row {
   width: 100%;
   justify-content: space-evenly;
 }
-.items > .row article {
+.items > .row article, .services > .row article {
+  padding: 20px;
   width: 350px;
-  height: 350px;
   background-color: white;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: 50px;
 }
-.items > .row article > * {
+.items > .row article > *, .services > .row article > * {
   margin: 15px 0;
   width: 100%;
 }
-.items > .row article > h2 {
+.items > .row article > h2, .services > .row article > h2 {
   text-align: center;
   font-size: 30px;
 }
-.items > .row article > p {
-  text-align: center;
+.items > .row article > p, .services > .row article > p {
+  line-height: 30px;
+  text-align: justify;
   font-size: 18px;
   color: rgb(65, 65, 65);
+  -moz-text-align-last: center;
+       text-align-last: center;
 }
-.items > .row article > div {
+.items > .row article > div, .services > .row article > div {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.items > .row article > div > div {
+.items > .row article > div > div, .services > .row article > div > div {
   width: 50px;
   height: 50px;
   position: relative;
   overflow: hidden;
 }
-.items > .row article > div > div:hover > i:nth-of-type(1) {
+.items > .row article > div > div:hover > i:nth-of-type(1), .services > .row article > div > div:hover > i:nth-of-type(1) {
   left: 0;
   transition: 0.4s;
 }
-.items > .row article > div > div:hover > i:nth-of-type(2) {
+.items > .row article > div > div:hover > i:nth-of-type(2), .services > .row article > div > div:hover > i:nth-of-type(2) {
   left: 50px;
   transition: 0.4s;
 }
-.items > .row article > div > div > i {
+.items > .row article > div > div > i, .services > .row article > div > div > i {
   width: 100%;
   height: 100%;
   border: black;
@@ -207,15 +210,28 @@ main > div {
   justify-content: center;
   align-items: center;
 }
-.items > .row article > div > div > i:nth-of-type(1) {
+.items > .row article > div > div > i:nth-of-type(1), .services > .row article > div > div > i:nth-of-type(1) {
   left: -50px;
 }
-.items > .row article > div > div > i:nth-of-type(2) {
+.items > .row article > div > div > i:nth-of-type(2), .services > .row article > div > div > i:nth-of-type(2) {
   left: 0px;
 }
-.items > .row > figure {
+.items > .row > figure, .services > .row > figure {
   width: 100%;
 }
-.items > .row > figure > img {
+.items > .row > figure > img, .services > .row > figure > img {
+  width: 100%;
+}
+
+.services {
+  background-color: rgb(1, 1, 100);
+}
+.services article {
+  width: 250px !important;
+}
+.services article a {
+  color: orangered;
+  display: flex;
+  justify-content: center;
   width: 100%;
 }/*# sourceMappingURL=master.css.map */
