--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -234,4 +234,49 @@ main > div {
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+.free {
+  width: 100%;
+  background-image: url(../img/case-study-gallery-3-1.jpg);
+  background-size: cover;
+  padding: 100px 0;
+  justify-content: center;
+  position: relative;
+}
+.free::before {
+  content: "";
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.415);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.free > div {
+  width: 50%;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.free > div > * {
+  color: white;
+  text-align: center;
+  margin: 25px 0;
+  width: 100%;
+}
+.free > div > a {
+  display: flex;
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: orangered;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
 }/*# sourceMappingURL=master.css.map */
