--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -228,7 +228,7 @@ main > div {
             width: 100%;
         }
       }
-  }
+  } 
 }
 .services{
     background-color: rgb(1, 1, 100); 
@@ -240,6 +240,51 @@ main > div {
             display: flex;
             justify-content: center;
             width: 100%;
+        }
+    }
+}
+.free{
+    width: 100%;
+    // height: 300px;
+    background-image: url(../img/case-study-gallery-3-1.jpg);
+    background-size: cover;
+    padding: 100px 0;
+    justify-content: center;
+    position: relative;
+    &::before{
+        content: '';
+        display: flex;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.415);
+        position: absolute;
+        top: 0;left: 0;
+    }
+    >div{
+        width: 50%;
+        position: relative;
+        // border: 1px solid white;  
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        >*{
+          color: white;
+          text-align: center;
+          margin: 25px 0;
+          width: 100%;
+        }
+        >a{
+          display: flex;
+          width: 200px;
+          height: 50px;
+          border-radius: 50px;
+          background-color: orangered;
+          color: white;
+          justify-content: center;
+          align-items: center;
+          font-size: 20px;
+          text-decoration: none;
+          text-transform: uppercase;
         }
     }
 }
