--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -279,4 +279,31 @@ main > div {
   font-size: 20px;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.footer_bottom {
+  width: 100%;
+  padding: 100px 0;
+  display: flex;
+  justify-content: center;
+}
+.footer_bottom > div {
+  width: 50%;
+}
+.footer_bottom > div > * {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+.footer_bottom > div > figure > img {
+  width: 200px;
+}
+.footer_bottom > div > ul > li {
+  margin: 0 20px;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+.footer_bottom > div > p {
+  text-align: center;
 }/*# sourceMappingURL=master.css.map */
