--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -288,3 +288,35 @@ main > div {
         }
     }
 }
+
+.footer_bottom{
+  width: 100%;
+  padding: 100px 0 ;
+  display: flex;
+  justify-content: center;
+  >div{
+    width: 50%;
+    // border: 1px solid rgb(195, 30, 30);
+    >*{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin: 20px 0;
+    }
+    >figure{
+      >img{
+        width: 200px;
+      }
+    }
+    >ul{
+      >li{
+        margin: 0 20px;
+        text-transform: uppercase;
+        font-size: 20px;
+      }
+    }
+    >p{
+      text-align: center;
+    }
+  }
+}
