--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -8,6 +8,21 @@ main > div {
   height: 120vh;
 }
 
+.fixed {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  background-color: white;
+  border-radius: 5px;
+  position: fixed;
+  top: 30%;
+  right: 10px;
+  z-index: 999;
+}
+
 .head_top {
   width: 80%;
   height: 120vh;
