--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -7,7 +7,7 @@ main > div {
   background-position: 90% 80%;
   height: 120vh;
 }
-.fixed{
+.fixed {
   width: 100px;
   height: 100px;
   display: flex;
@@ -151,7 +151,8 @@ main > div {
 .agency {
   width: 100%;
   justify-content: center;
-  margin: 100px 0;
+  padding: 150px 0;
+  background-color: #f7f8f9;
   > article {
     width: 50%;
     // border: 1px solid red;
@@ -160,176 +161,206 @@ main > div {
       margin: 25px 0;
     }
     > p {
-      color: black;
+      color: #5d5f65;
       font-size: 18px;
     }
     > h2 {
+      color: #202020;
       font-size: 30px;
       text-transform: uppercase;
     }
   }
 }
-.items,.services {
-    background-color: rgb(183, 183, 183);
+.items,
+.services {
+  background-color: #f7f8f9;
   > .row {
-    width: 100%;
+    width: 90%;
+    margin: auto;
     justify-content: space-evenly;
+    padding: 50px 0;
     article {
       padding: 20px;
       width: 350px;
-    //   height: 350px;
+      //   height: 350px;
       background-color: white;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       margin: 50px;
-      >*{
+      > * {
         // border: 1px solid red;
-        margin: 15px 0;width: 100%;
+        margin: 15px 0;
+        width: 100%;
       }
-      >h2{
+      > h2 {
         text-align: center;
         font-size: 30px;
-      } 
-      >p{
+      }
+      > p {
         line-height: 30px;
         text-align: justify;
-        font-size: 18px;color: rgba(65,65,65);
+        font-size: 18px;
+        color: rgba(65, 65, 65);
         text-align-last: center;
       }
-      >div{
+      > div {
         display: flex;
         justify-content: center;
         align-items: center;
-        >div{
-            width: 50px;
-            height: 50px;
+        > div {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          &:hover  i:nth-of-type(1) {
+            left: 0;
+            transition: 0.2s;
+          }
+          &:hover  i:nth-of-type(2) {
+            left: 100px;
+            transition: 0.2s;
+          }
+          &:hover > h2{
+            color: #ffa737;
+            transition: .7s;
+          }
+          >h2{
+            padding-top: 30px;
+          }
+          > div {
+            width: 100px;
+            height: 70px;
             // border: 1px solid gray;
             position: relative;
             overflow: hidden;
-            &:hover>i:nth-of-type(1){
-                left: 0;
-                transition: .4s;
+            > i {
+              > svg {
+                color: #ffa737;
+              }
+              width: 100%;
+              height: 100%;
+              // background-color:red;
+              border: black;
+              position: absolute;
+              // font-size: 60px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              &:nth-of-type(1) {
+                left: -100px;
+              }
+              &:nth-of-type(2) {
+                left: 0px;
+              }
             }
-            &:hover>i:nth-of-type(2){
-                left: 50px;
-                transition: .4s;
-            }
-            >i{
-                width: 100%;
-                height: 100%;
-                // background-color:red; 
-                border: black;
-                position: absolute;
-                font-size: 30px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                &:nth-of-type(1){
-                    left: -50px;
-                }
-                &:nth-of-type(2){
-                    left: 0px;
-                }
-            }
+          }
         }
       }
-      
     }
-    >figure{
-        width: 100%;
-        >img{
-            width: 100%;
-        }
+    > figure {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      > img {
+        width: 80%;
+        height: 800px;
+        object-fit: cover;
       }
-  } 
-}
-.services{
-    background-color: rgb(1, 1, 100); 
-    article{
-        width: 250px !important;
-        // height: 400px !important;
-        a{
-            color: orangered;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
     }
+  }
+  > .row:nth-of-type(2) {
+    padding: 50px 0 0 0;
+  }
 }
-.free{
+.services {
+  background-color: #000c47;
+  article {
+    width: 250px !important;
+    // height: 400px !important;
+    a {
+      color: orangered;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+  }
+}
+.free {
+  width: 100%;
+  // height: 300px;
+  background-image: url(../img/case-study-gallery-3-1.jpg);
+  background-size: cover;
+  padding: 100px 0;
+  justify-content: center;
+  position: relative;
+  &::before {
+    content: "";
+    display: flex;
     width: 100%;
-    // height: 300px;
-    background-image: url(../img/case-study-gallery-3-1.jpg);
-    background-size: cover;
-    padding: 100px 0;
-    justify-content: center;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.415);
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  > div {
+    width: 50%;
     position: relative;
-    &::before{
-        content: '';
-        display: flex;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0,0,0,0.415);
-        position: absolute;
-        top: 0;left: 0;
+    // border: 1px solid white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    > * {
+      color: white;
+      text-align: center;
+      margin: 25px 0;
+      width: 100%;
     }
-    >div{
-        width: 50%;
-        position: relative;
-        // border: 1px solid white;  
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        >*{
-          color: white;
-          text-align: center;
-          margin: 25px 0;
-          width: 100%;
-        }
-        >a{
-          display: flex;
-          width: 200px;
-          height: 50px;
-          border-radius: 50px;
-          background-color: orangered;
-          color: white;
-          justify-content: center;
-          align-items: center;
-          font-size: 20px;
-          text-decoration: none;
-          text-transform: uppercase;
-        }
+    > a {
+      display: flex;
+      width: 200px;
+      height: 50px;
+      border-radius: 50px;
+      background-color: orangered;
+      color: white;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      text-decoration: none;
+      text-transform: uppercase;
     }
+  }
 }
 
-.footer_bottom{
+.footer_bottom {
   width: 100%;
-  padding: 100px 0 ;
+  padding: 100px 0;
   display: flex;
   justify-content: center;
-  >div{
+  > div {
     width: 50%;
     // border: 1px solid rgb(195, 30, 30);
-    >*{
+    > * {
       width: 100%;
       display: flex;
       justify-content: center;
       margin: 20px 0;
     }
-    >figure{
-      >img{
+    > figure {
+      > img {
         width: 200px;
       }
     }
-    >ul{
-      >li{
+    > ul {
+      > li {
         margin: 0 20px;
         text-transform: uppercase;
         font-size: 20px;
       }
     }
-    >p{
+    > p {
       text-align: center;
     }
   }
