--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -549,7 +549,7 @@ main > div {
     > div.card {
       position: relative;
       border: 10px solid #f7f7f7;
-
+      box-shadow: 0 0 6px 6px rgba(0, 0, 0, 0.08);
       div.row {
         width: 300px;
         background: white;
@@ -642,6 +642,85 @@ main > div {
             }
           }
         }
+      }
+      &:nth-of-type(3){
+        .panel_footer{
+          >a{
+            background-color: #ffa737;
+            color: white !important;
+            &:hover{
+              background-color: #ffb251;
+              border-color: white !important;
+            }
+          }
+        }
+      }
+    }
+  }
+  
+}
+.latestNews{
+  background-color: #f7f8f9;
+  >div{
+    width: 100%;
+    >.card_container{
+      margin: 50px 0;
+      gap: 30px;
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      // border: 1px solid black;
+      >.card{
+        width: 400px;
+        // border: 1px solid black;
+        >.card_header{
+          >figure{
+            >img{
+              width: 400px;
+              height: 300px;
+              object-fit: cover;
+            }
+          }
+        }
+        >.card_body{
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+          >h2{
+            color: #ffa737;
+            font-size: 23px;
+            margin-top: 12px;
+          }
+          >p{
+            text-align: center;
+            line-height: 30px;
+            text-transform:initial;
+              color: #5d5f65;
+            &:nth-of-type(1){
+              font-size: 14px;
+            }
+            margin-bottom: 12px;
+          }
+        }
+      }
+    }
+    >.button_footer{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin-bottom: 120px;
+      >a{
+        padding: 13px 29px;
+        background-color: #ffa737;
+        border-radius: 50px;
+        color: white;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 12px;
+        &:hover{
+          background-color: #ffb251;        }
       }
     }
   }
