--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -362,7 +362,7 @@ main > div {
   > .piture_content {
     margin-top: 100px;
     // border: 6px solid yellowgreen;
-    width: 50%;
+    width: 70%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -727,12 +727,15 @@ main > div {
     left: 0;
   }
   > div {
-    width: 50%;
+    z-index: 1000;
+    width: 100%;
     position: relative;
     // border: 1px solid white;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     > * {
       color: white;
       text-align: center;
@@ -744,20 +747,31 @@ main > div {
       width: 200px;
       height: 50px;
       border-radius: 50px;
-      background-color: orangered;
+      background-color: #ffa737;
       color: white;
       justify-content: center;
       align-items: center;
-      font-size: 20px;
+      font-size: 15px;
       text-decoration: none;
       text-transform: uppercase;
+      &:hover{
+        background-color: #ffb251;
+      }
+    }
+    >h2{
+      color: #f8f8f8;
+      font-size: 40px;
+    }
+    >p{
+      width: 30%;
+      line-height: 40px;
     }
   }
 }
 
 .footer_bottom {
   width: 100%;
-  padding: 100px 0;
+  padding: 50px 0;
   display: flex;
   justify-content: center;
   > div {
@@ -771,18 +785,50 @@ main > div {
     }
     > figure {
       > img {
-        width: 200px;
+        width: 170px;
       }
     }
     > ul {
+      margin: 50px 0 40px 0;
       > li {
+        >a{
+          display: flex;
+        }
+        display: flex;
         margin: 0 20px;
-        text-transform: uppercase;
-        font-size: 20px;
+        text-transform: capitalize;
+        font-size: 15px;
+        &:nth-of-type(4){
+          span{
+            display: flex;
+            color: #ffa737;
+            border: 1px solid #ffa737;
+            border-radius: 5px;
+            transform: translateY(-3px);
+            font-size: 12px;
+            margin-left: 5px;
+            padding: 3px 4px;
+          }
+        }
       }
     }
     > p {
       text-align: center;
+      >span{
+        color: #ffa737;
+        margin: 0px 4px;
+      }
+    }
+    >div.icon{
+      display: flex;
+      >i{
+        color: #5d5f65;
+        margin: 20px;
+        svg{
+          width: 18px;
+          height: 18px;
+        }
+      }
     }
   }
 }
